--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,9 @@
     "browser": true,
     "commonjs": true,
     "node": true,
-    "es6": true
+    "es6": true,
+    "es2017": true,
+    "es2018": true
   },
   "rules": {
     "no-duplicate-case": "error",
