--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express-session": "^1.17.3",
     "mysql2": "^3.5.1",
     "openai": "^3.3.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
