--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.5.1",
     "openai": "^3.3.0",
     "passport": "^0.6.0",
